Remove reference to Code Sandbox

--- a/examples/minimal/index.html
+++ b/examples/minimal/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	<script src="src/index.js"></script>
-	<h1>👇🏻 Check out the Console in Code Sandbox</h1>
+	<h1>👇🏻 Check out the Console</h1>
 </body>
 
 </html>
