--- a/examples/kitchen-sink/src/index.html
+++ b/examples/kitchen-sink/src/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./bundle.js"></script>
+    <script src="./index.tsx"></script>
     <style>
 body {
   color: #24292e;
