Support mobile viewport sizes in examples

--- a/examples/minimal/index.html
+++ b/examples/minimal/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Redux Saga State Machine - Minimal Example</title>
 	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width">
 </head>
 
 <body>
