--- a/examples/kitchen-sink/src/index.html
+++ b/examples/kitchen-sink/src/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Redux Saga State Machine Example</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width">
   </head>
   <body>
     <div id="app"></div>
